--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
     "jenssegers/mongodb": "^4.0",
     "mongodb/laravel-mongodb": "^4.0",
     "illuminate/database": "^7.30.3|^8.22.1|^9.0|^10.0",
-    "illuminate/queue": "^7.30.3|^8.22.1|^9.0",
-    "illuminate/support": "^7.30.3|^8.22.1|^9.0",
+    "illuminate/queue": "^7.30.3|^8.22.1|^9.0|^10.0",
+    "illuminate/support": "^7.30.3|^8.22.1|^9.0|^10.0",
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.17",
-    "laravel/framework": "^7.30.3|^8.22.1|^9.0",
+    "laravel/framework": "^7.30.3|^8.22.1|^9.0|^10.0",
     "mockery/mockery": "^1.3.2",
     "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0",
-    "phpunit/phpunit": "^8.0|^9.0"
+    "phpunit/phpunit": "^8.0|^9.0|^10.0"
   },
   "autoload": {
     "psr-4": {
