--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "php": "^7.2|^8.0|^8.1",
     "ext-json": "*",
     "ext-mbstring": "*",
-    "jenssegers/mongodb": "^4.0",
-    "mongodb/laravel-mongodb": "^4.0",
+    "jenssegers/mongodb": "^3.9|^4.0",
     "illuminate/database": "^7.30.3|^8.22.1|^9.0|^10.0",
     "illuminate/queue": "^7.30.3|^8.22.1|^9.0|^10.0",
     "illuminate/support": "^7.30.3|^8.22.1|^9.0|^10.0",
