--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+  "version":"1.0.0",
   "name": "violetshih/laravel-mongo-queue-monitor",
   "description": "Queue Monitoring for Laravel MongoDb Job Queue",
   "type": "library",
