--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,21 @@
     }
   ],
   "require": {
-    "php": "^7.2|^8.0|^8.1",
+    "php": "^8.1|^8.2|^8.3",
     "ext-json": "*",
     "ext-mbstring": "*",
-    "jenssegers/mongodb": "^3.8|^3.9|^4.0",
-    "illuminate/database": "^7.30.3|^8.22.1|^9.0|^10.0",
-    "illuminate/queue": "^7.30.3|^8.22.1|^9.0|^10.0",
-    "illuminate/support": "^7.30.3|^8.22.1|^9.0|^10.0",
-    "nesbot/carbon": "^2.0"
+    "mongodb/laravel-mongodb": "^5.4",
+    "illuminate/database": "^11.0",
+    "illuminate/queue": "^11.0",
+    "illuminate/support": "^11.0",
+    "nesbot/carbon": "^2.72|^3.0"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.17",
-    "laravel/framework": "^7.30.3|^8.22.1|^9.0|^10.0",
-    "mockery/mockery": "^1.3.2",
-    "orchestra/testbench": "^3.8|^4.0|^5.0|^6.0", 
-    "phpunit/phpunit": "^8.0|^9.0|^10.0"
+    "friendsofphp/php-cs-fixer": "^3.0",
+    "laravel/framework": "^11.0",
+    "mockery/mockery": "^1.6.0",
+    "orchestra/testbench": "^8.0|^9.0",
+    "phpunit/phpunit": "^10.0|^11.0"
   },
   "autoload": {
     "psr-4": {
